--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <meta name="robots" content="index">
     <meta name="googlebot" content="index">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <script src="
+    https://maps.googleapis.com/maps/api/js?key=AIzaSyDzPG91wtUKY3vd_iD3QWorkUCSdofTS58&libraries=places,geocoding"> </script>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
