--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
   <meta name="robots" content="index">
   <meta name="googlebot" content="index">
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <script
+  <!-- <script
     src="
-    https://maps.googleapis.com/maps/api/js?key=AIzaSyDYW9eEhXbjHZNOD9YlkxIMQNkJNXdGdMk&libraries=places,geocoding"> </script>
+    https://maps.googleapis.com/maps/api/js?key=AIzaSyDYW9eEhXbjHZNOD9YlkxIMQNkJNXdGdMk&libraries=places,geocoding"> </script> -->
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
