--- a/public/index.html
+++ b/public/index.html
@@ -43,13 +43,7 @@
 
   <!-- Google tag (gtag.js) -->
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YQZ294N4NS"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-YQZ294N4NS');
-  </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YQZ294N4NS"></script> <script> {` window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-YQZ294N4NS'); `} </script>
 
   <!-- End Google tag (gtag.js) -->
 
