manage chnages  Desgin

--- a/public/index.html
+++ b/public/index.html
@@ -43,9 +43,21 @@
 
   <!-- Google tag (gtag.js) -->
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YQZ294N4NS"></script> <script> {` window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-YQZ294N4NS'); `} </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YQZ294N4NS"></script> 
+  <script> {` window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-YQZ294N4NS'); `} </script>
 
   <!-- End Google tag (gtag.js) -->
+
+
+      <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-2S3GY99WLQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-2S3GY99WLQ');
+    </script>
+
 
   <title>Event Management</title>
 </head>
