manage chnages  Desgin

--- a/public/index.html
+++ b/public/index.html
@@ -43,20 +43,34 @@
 
   <!-- Google tag (gtag.js) -->
 
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YQZ294N4NS"></script>
-  <script> { ` window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-YQZ294N4NS'); ` } </script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-YQZ294N4NS"></script>
+  <script> { ` window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-YQZ294N4NS'); ` } </script> -->
 
   <!-- End Google tag (gtag.js) -->
 
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2S3GY99WLQ"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-    gtag('config', 'G-2S3GY99WLQ');
-  </script>
+ <script async src="https://www.googletagmanager.com/gtag/js?id=G-2S3GY99WLQ"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-2S3GY99WLQ');
+    </script>
+
+    <!-- Meta Pixel Code -->
+    <script>
+      !function(f,b,e,v,n,t,s)
+      {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+      n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+      if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+      n.queue=[];t=b.createElement(e);t.async=!0;
+      t.src=v;s=b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t,s)}(window, document,'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+      fbq('init', '1238441458048092');
+      fbq('track', 'PageView');
+    </script>
 
 
   <title>Event Management</title>
